# food-collector

./: Dockerfile  README.md  pyproject.toml
foodcollector/: foodsharing.py  main.py  messaging.py  models.py  webdriver.py
foodcollector/config/: logging.ini
tests/: test_foodcollector.py
