[tool.poetry]
name = "foodcollector"
version = "0.1.0"
description = ""
authors = ["Yannik Queisler <dev.yannik.queisler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
click = "^8.0.1"
twilio = "^6.59.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
